# narsil

./: Cargo.toml  README.md
conf/: default.yaml
src/: builder.rs  captures.rs  error.rs  generator.rs  generator_func.rs  id_factory.rs  infill.rs  lib.rs  main.rs  ops.rs  run.rs  types.rs
src/config/: args.rs  config.rs  mod.rs
src/connect/: mod.rs  nearest_neighbor.rs
src/geometry/: linestring_utils.rs  mod.rs  rect_utils.rs
src/mesh/: bounds.rs  mod.rs
src/model_file/: ascii_stl.rs  binary_stl.rs  data.rs  mod.rs
src/slicer/: error.rs  mod.rs  slicer.rs
src/types/: aliases.rs  geom.rs  mod.rs  traits.rs
src/writers/: debug_html.rs  mod.rs
