
[package]
name = "narsil"
version = "0.1.0"
authors = ["Joseph Sadusk <jsadusk@gmail.com>"]

[dependencies]
regex = "1.0.0"
lazy_static = "1.0.0"
byteorder = "1.2.6"
hedge = { git = "ssh://git@sadusk.com/joe/hedge", branch = "hashable_index" }
svg = "0.5"
quickersort = "3.0"
rayon = "1.0"
geo = "0.13.0"
geo-booleanop = "0.2.1"
geo-offset = "0.1.0"
serde = { version = "1.0.111", features = ["derive"] }
serde_yaml = "0.8.13"