
[package]
name = "narsil"
version = "0.1.0"
authors = ["Joseph Sadusk <jsadusk@gmail.com>"]

[dependencies]
regex = "1.0.0"
lazy_static = "1.0.0"
byteorder = "1.2.6"
hedge = { git = "ssh://git@sadusk.com/joe/hedge", branch = "hashable_index" }
svg = "0.5"
quickersort = "3.0"
rayon = "1.0"
geo = "0.18"
geo-clipper = { path = "../geo-clipper" }
geo-collate = { git = "ssh://git@github.com/jsadusk/geo-collate" }
#simple-generator = { git = "ssh://git@github.com/jsadusk/simple-generator" }
simple-generator = { path = "../simple-generator" }
geo-svg = "0.5"
serde = { version = "1.0.111", features = ["derive"] }
serde_yaml = "0.8.13"
rstar = "0.9.2"

[profile.release]
debug = true